--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "pillow (>=11.2.1,<12.0.0)",
     "python-decouple (>=3.8,<4.0)",
     "djangorestframework (>=3.16.0,<4.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)"
+    "psycopg2 (>=2.9.10,<3.0.0)"
 ]
 
 
