--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "python-decouple (>=3.8,<4.0)",
     "djangorestframework (>=3.16.0,<4.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
+    "djangorestframework-simplejwt (>=5.3.0)",
+    "pyjwt (==2.8.0)",
 ]
 
 
